--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,30 @@
+# porta do servidor
 server.port=9090
+
+# # caminho do banco de dados jdbc:nomedosoftware/ip/porta/nomedobanco
+# spring.datasource.url=jdbc:postegresql://localhost:5432/mercadinho
+
+# #Nome do usuario de conexao com o banco
+# spring.datasource.username=postgres
+
+# # senha de conexão com o banco de dados
+# spring.datasource.password=123
+
+# #nome do driver
+ spring.datasource.driver-class-name=org.postgresql.Driver
+
+# # Configuracao para indicar o hibernate para gerar atualizacoes automaticas constantemente no schema
+# spring.jpa.hibernate.ddl-auto=update
+
+
+
+
+## default connection pool
+
+## PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/mercadinho
+spring.datasource.username=postgres
+spring.datasource.password=123
+
+#drop n create table again, good for testing, comment this in production
+spring.jpa.hibernate.ddl-auto=update
